[gd_scene load_steps=7 format=3 uid="uid://b8wmxtfw71wp"]

[ext_resource type="Texture2D" uid="uid://ddwobnon6ksr7" path="res://inventory_system/resources/sprites/inner_panel.png" id="1"]
[ext_resource type="PackedScene" uid="uid://c1xw2ywgml5ml" path="res://inventory_system/scenes/ui/ui_window.tscn" id="2"]
[ext_resource type="Resource" path="res://inventory_system/data/resources/settings_data.tres" id="3"]
[ext_resource type="FontFile" uid="uid://c2wbhmvt6pm3k" path="res://inventory_system/resources/font/Arcadepix Plus.ttf" id="8"]
[ext_resource type="Script" path="res://inventory_system/scripts/ui/settings.gd" id="9"]

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="settings" instance=ExtResource("2")]
script = ExtResource("9")
settings_data = ExtResource("3")

[node name="lbl_title" parent="title" index="1"]
text = "Settings"

[node name="setting list" type="VBoxContainer" parent="." index="1"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="scale" type="NinePatchRect" parent="setting list" index="0"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("1")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="setting list/scale" index="0"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 4.0
offset_right = 59.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("2")
text = "- Scale -"

[node name="min" type="Label" parent="setting list/scale" index="1"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 4.0
offset_right = -24.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("2")
text = "Min: #"

[node name="max" type="Label" parent="setting list/scale" index="2"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = 25.0
offset_top = 4.0
offset_right = 57.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("2")
text = "Max: #"

[node name="scale_slider" type="HSlider" parent="setting list/scale" index="3"]
unique_name_in_owner = true
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -6.0
offset_right = -6.0
offset_bottom = 10.0
min_value = 0.5
max_value = 3.5
step = 0.1
value = 1.0

[node name="fullscreen" type="NinePatchRect" parent="setting list" index="1"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("1")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="setting list/fullscreen" index="0"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 4.0
offset_right = 59.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("2")
text = "- Fullscreen -"

[node name="fullscreen_check" type="CheckBox" parent="setting list/fullscreen" index="1"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -8.14029
offset_right = 12.0
offset_bottom = 15.8597

[connection signal="gui_input" from="setting list/scale/scale_slider" to="." method="_on_scale_slider_gui_input"]
[connection signal="toggled" from="setting list/fullscreen/fullscreen_check" to="." method="_on_CheckBox_toggled"]
